Setting up for Heroku. Changed from connection.js to config.json, checking for production port.

--- a/config/config.json
+++ b/config/config.json
@@ -2,25 +2,23 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "burger",
+    "database": "burgers_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "root",
-    "database": "burger",
+    "database": "burgers_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "root",
-    "database": "burger",
-    "host": "127.0.0.1",
+    "username": "bf6f24a8a92a24",
+    "password": "c808c96d",
+    "database": "heroku_431c4953d111cde",
+    "host": "us-cdbr-iron-east-03.cleardb.net",
+    "port": "3306",
     "dialect": "mysql"
-  },
-  "app": {
-    "port": 3000
   }
 }
